objects/agf__ADM_Third_Party_Software__c.object
<CustomObject>
    <fields>
        <fullName>agf__Approval_Status__c</fullName>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Submitted</fullName>
                    <default>true</default>
                    <label>Not Submitted</label>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>agf__Coupa_Record__c</fullName>
        <description>For commercial products only.</description>
        <inlineHelpText>Link to the Coupa record for this product (for commercial products only).</inlineHelpText>
        <label>Coupa Record</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>agf__External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>agf__Jar_Name__c</fullName>
        <label>Jar Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__License_URL__c</fullName>
        <label>License URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>agf__Module__c</fullName>
        <label>Module</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>apex-parser</fullName>
                </value>
                <value>
                    <fullName>platform</fullName>
                </value>
                <value>
                    <fullName>resin</fullName>
                </value>
                <value>
                    <fullName>sfdc</fullName>
                </value>
                <value>
                    <fullName>sfdc-test/func</fullName>
                </value>
                <value>
                    <fullName>sfdc-test/unit</fullName>
                </value>
                <value>
                    <fullName>shared</fullName>
                </value>
                <value>
                    <fullName>shared/endorsed</fullName>
                </value>
                <value>
                    <fullName>udd</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>agf__Notes__c</fullName>
        <inlineHelpText>Describe how this third party software will be used: e.g. Does it stay on our server? Is it part of a client? Is it javascript pushed to a user&apos;s browser?</inlineHelpText>
        <label>Use Cases/Notes</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>agf__Perforce_Path__c</fullName>
        <description>Link to Perforce Path or Direct Download Link</description>
        <inlineHelpText>Link to Perforce Path or Direct Download Link</inlineHelpText>
        <label>Source Code Path</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Purpose__c</fullName>
        <label>Purpose</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Scheduled_Build__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Scheduled Build</label>
        <referenceTo>agf__ADM_Build__c</referenceTo>
        <relationshipLabel>Third Party Software</relationshipLabel>
        <relationshipName>Third_Party_Software</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__Scrum_Team__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Scrum Team (Owner)</label>
        <referenceTo>agf__ADM_Scrum_Team__c</referenceTo>
        <relationshipLabel>Third Party Software</relationshipLabel>
        <relationshipName>Third_Party_Software</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>agf__URL__c</fullName>
        <description>Link to product information page.</description>
        <inlineHelpText>Link to product information page.</inlineHelpText>
        <label>URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>agf__Used_By__c</fullName>
        <label>Used By</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>agf__Vendor__c</fullName>
        <label>Vendor</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>agf__Version__c</fullName>
        <label>Version</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <label>Third Party Software</label>
    <listViews>
        <fullName>agf__All</fullName>
        <columns>NAME</columns>
        <columns>agf__Version__c</columns>
        <columns>agf__Jar_Name__c</columns>
        <columns>agf__Scrum_Team__c</columns>
        <columns>agf__Purpose__c</columns>
        <columns>agf__Used_By__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>agf__All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>agf__No_owner</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>agf__Jar_Name__c</columns>
        <columns>agf__Used_By__c</columns>
        <columns>agf__Scrum_Team__c</columns>
        <filterScope>Everything</filterScope>
        <label>No owner</label>
    </listViews>
    <nameField>
        <label>Software Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Third Party Software</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>